# chat-app

./: LICENSE  README.md
chat-app-back/: .env  .gitignore  chat_app.db  gunicorn_config.py  main.py  pyproject.toml
chat-app-back/chat/: chat_model.py  system_model.py
chat-app-back/database/: database.py  db_chat.py  db_config.py  db_message.py  db_system.py  models.py
chat-app-back/openai/: chat_model.py
chat-app-back/routes/: chat.py  shemas.py
chat-app-back/test/: test_db.py
chat-app-front/: .eslintrc.json  .prettierignore  .prettierrc  package-lock.json  package.json  tailwind.config.js
chat-app-front/src/components/atom/: ChatDisplay.tsx  ListBox.tsx  NewChatButton.tsx  UserButton.tsx
chat-app-front/src/components/molecules/: ChatBox.tsx  CreateBox.tsx  MessageBox.tsx  PastChat.tsx  SearchBox.tsx  SettingView.tsx
chat-app-front/src/components/organism/: ChatView.tsx  Main.tsx  MainChat.tsx  Modal.tsx  Sidebar.tsx
chat-app-front/src/components/template/: Layout.tsx
chat-app-front/src/lib/: chat.ts
chat-app-front/src/lib/store/: context.ts  reducer.ts
chat-app-front/src/pages/: [id].tsx  _app.tsx  _document.tsx  index.tsx
chat-app-front/src/styles/: globals.css
chat-app-front/src/types/: chat.ts
