[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["yorimichi <kouhaisan.yorimichi@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_app"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.95.1"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
